chore: Update asset link

--- a/_posts/2023-11-14-milestone 2.md
+++ b/_posts/2023-11-14-milestone 2.md
@@ -4,38 +4,38 @@ Live at: https://hockey-prediction.streamlit.app
 
 ## 2. Feature engineering I
 ### A histogram of shot counts binned by distance
-![Alt text](../assets/milestone2/question2/shot-by-distance-hist.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/shot-by-distance-hist.png)
 
 The shots are consistently more frequent around the offensive zone and the goals are higher closer to the goal and steadily decrease, showing that shots taken closer to the net have a higher success rate.
 
 ### A histogram of shot counts binned by angle
-![Alt text](../assets/milestone2/question2/shot-by-angle-hist.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/shot-by-angle-hist.png)
 
 The distribution appears to be symmetric around the 0-degree angle. There are prominent peaks near the center, which correspond to shots taken directly in front of the net. The high number of shots and goals in this area suggests that straight-on shots are more common and successful.
 
 ### A 2D histogram where one axis is the distance and the other is the angle.
-![Alt text](../assets/milestone2/question2/join-plot-hist.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/join-plot-hist.png)
 
 There is a sparse distribution of shots at greater distances, indicating that shots are less frequently taken from far away. As the distance from the net increases, the spread of angles from which shots are taken appears to decrease. This suggests that long-distance shots are less likely to be taken from wide angles.
 
 ### A histogram of average goal rate vs distance bins
-![Alt text](../assets/milestone2/question2/Goal_rate_vs_distance.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/Goal_rate_vs_distance.png)
 
 Now we have calculated the goal rate which is the efficiency of goal scoring attempts. As seen from the bar plot we can see that the efficiency is more at the distance [0-20] since it's near the goal post. The interesting thing is that the efficiency increases at higher distances. Even though there were less shots in higher distance, the efficiency of scoring a goal is better than distances in the middle. Since this is counter-intuitive, it might be a sign that there was some mistake either in data processing or in the entry of data and these shots were actually taken from the offensive zone and simply mislabelled which would render our distance calculation wrong.
 
 ### A histogram of average goal rate vs angle bins
-![Alt text](../assets/milestone2/question2/Goal_rate_vs_angle.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/Goal_rate_vs_angle.png)
 
 The goal rate seems to follow a similar trend that of the shot counts with the highest being directly in front of the goal and then it gets lower as the angle becomes more extreme. As discussed the straight-on shots lead to a higer goal rate. 
 
 
 ### A histogram of goals count binned by distance.
-![Alt text](../assets/milestone2/question2/goals_hist.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/goals_hist.png)
 The majority of goals are scored from a close distance. There are very few goals scored on an empty net. They are spread out over a range of distances, including some from very long ranges. The non-empty net goals are rarely scored from distances beyond 75 feet, underscoring the difficulty of scoring long-range goals with the presence of a goalie.
 
 Regarding the domain knowledge: “it is incredibly rare to score a non-empty net goal on the opposing team from within your defensive zone”, a histogram of goals from team's defensive zone is created as below.
 
-![Alt text](../assets/milestone2/question2/goal_defensive_zone_hist.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/question2/goal_defensive_zone_hist.png)
 
 The histogram reveals that scoring a non-empty-net goal on the opposing team from the team's defensive zone is indeed a rare event. The distribution suggests that these occurrences are relatively random and are not heavily influenced by the distance from the goal. Additionally, it's noted that some goal data may be recorded incorrectly, with one example is the first goal of game 2018020722 at 04:39, 1st period. The x/y coordinates have been recorded incorrectly to -85 and -22 respectively. For verification and context, game highlights are available through the provided [link](https://www.nhl.com/gamecenter/bos-vs-phi/2019/01/16/2018020722/playbyplay). This could explain why for certain bin distances, there are even more goals with a non-empty net than with an empty net. 
 
@@ -44,7 +44,7 @@ The histogram reveals that scoring a non-empty-net goal on the opposing team fro
 We created a training and validation split and used net_distance from out train dataset to predict binary classification of is_goal in our dataset and calculated the accuracy. The accuracy we were getting was 0.90 which is a good one. But then after looking at the predictions we noticed that most of the values were 0. When we used y_pred.sum(), the result was 0. This lead to the conclusion that the data is imbalanced and the class 0 is overrepresented which leads to a very accurate model. In hockey, it's common knowledge that goals are rarely scored, hence class 0 represents the amount of goals that were missed. Another metric like recall would show that our classifier's performance is overestimated with accuracy alone.
 
 ### Logistic Regression Trained on Distance. 
-![Alt text](../assets/milestone2/Question3/logreg_net_distance.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question3/logreg_net_distance.png)
 
 [link](https://www.comet.com/duyhung2201/ift-6758-b03-project/423ac86f42e4421fa6a588f1a0235284?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step) to experiment
 
@@ -59,7 +59,7 @@ Cummulative Proportion of goal: This graph shows that for the highest probabilit
 Reliability Diagram: The line follows the "Perfectly Calibrated" untill 0.2 and deviates from it and jumps to 0.7. This might indicate that the model predicted probability is only reliable untill 0.2. We also see that the prediction curve stops very early, which shows that our model is not able to generate probabilities higher than a bit over 20%.  
 
 ### Logistic Regression Trained on shot_angle
-![Alt text](../assets/milestone2/Question3/logreg_shot_angle.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question3/logreg_shot_angle.png)
 
 [link](https://www.comet.com/duyhung2201/ift-6758-b03-project/135ea67112774af49a64e27c219b972c?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
 [link](https://www.comet.com/duyhung2201/model-registry/logisitc_regression_-shot_angle/1.11.0?tab=assets)
@@ -73,7 +73,7 @@ Cummulative Proportion of goal: Since the model is not able to discriminate prop
 Reliability Diagram: Having only one dot on the "Perfectly Calibrated" tells us that the model does not give us additionnal information. So the angle feature alone is not enough to predict the probability of being a goal or not. 
 
 ### Logistic Regression Trained on net_distance and shot_angle. 
-![Alt text](../assets/milestone2/Question3/angle_distance.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question3/angle_distance.png)
 
 [link](https://www.comet.com/duyhung2201/ift-6758-b03-project/c3d0f5cc9085462ea455b3d127b3c55e?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=step)
 [link](https://www.comet.com/duyhung2201/model-registry/logisitc_regression_-shot_angle-net_distance/1.11.0?tab=assets)
@@ -81,7 +81,7 @@ Reliability Diagram: Having only one dot on the "Perfectly Calibrated" tells us 
 As seen from the net_distance the AUC score, goal rate , accumulation of goals and reliability diagram are all similar except the goal rate for this graph starts from 30% and shows a slightly steeper descent. This shows that the shot_angle, even when combined with the net_distance does not perform that much better than net_distance alone using a logistic regression classifier. 
 
 ### Using Random Baseline.
-![Alt text](../assets/milestone2/Question3/Random_classifier.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question3/Random_classifier.png)
 
 [link](https://www.comet.com/duyhung2201/ift-6758-b03-project/78e1833e53fa4a989067cd580382dbef?experiment-tab=params)
 [link](https://www.comet.com/duyhung2201/model-registry/random_classifier_/1.31.0?tab=assets)
@@ -134,7 +134,7 @@ This is the [link](https://www.comet.com/duyhung2201/ift-6758-b03-project/cbd721
 
 ### Baseline XGBoost classifier
 
-![Alt text](../assets/milestone2/Question_5/default_XGB.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/default_XGB.png)
 
 For this step, I used a training, validation split of 80/20. Since we have a large training set, this seemed like a good split to ensure there is sufficient data in both the training (for proper fitting) and validatidation set (so the metrics calculated are representative).
 I used a preprocessing function to generate the split even though the features were very simple, because I was going to reuse it for later questions and it made the codebase cleaner.
@@ -165,19 +165,19 @@ The XGBoost model has a lot of hyperparameters and choosing the best option is c
 
 The following figure shows all the different combinations used during this optimization. The figure is complex and hard to interpret, but its simply here to show that modifying one hyperparameter at a time is not enough, since we can see that every line zigzags up and down and even though one hyperparameter choice might seem like it lowers the accuracy, when combined with another hyperparameter it ends up being an advantageous choice.
 
-![Alt text](../assets/milestone2/Question_5/hyperparameters_combinations.jpeg)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/hyperparameters_combinations.jpeg)
 
 The following figure was created by using a custom report available on comet.ml to see the impact of each hyperparameter on the log_loss metric by using Spearman correlation. The most important hyperparameter is eta which corresponds to the learning rate. This make sense intuitively, because if the learning rate is too high, the model will never converge and instead jump back and forth.
 
-![Alt text](../assets/milestone2/Question_5/Spearman_correlations.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/Spearman_correlations.png)
 
 Finally, to further prove how complex hyperparameter tuning would be without using an agnostic approach like hyperparameter optimization, we can see below some of the hyperparameters for the 3 experiments with the lowest logloss. Even though their logloss is very similar, they all have various combinations of hyperparameter that sometimes vary widely.
 
-![Alt text](../assets/milestone2/Question_5/Top_3_experiments.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/Top_3_experiments.png)
 
 With the hyperparameter optimization, the model was able to improve significantly. Comparing the model with the baseline, we can see below that its performance as a classifier has improved significantly, with the AUC now being 76% as compared to 71% on baseline. Looking at the Goal rate, we can see that when the probability model percentile is very high it is now associated with a much higher goal rate with the line going a bit over 45 as compared with 27.5 around the 99th percentile. This shows that the model is better at detecting high probabilities and that is also reflected in the calibration plot. The cumulative proportion of goals still has a very similar curve that is hard to distinguish between models.
 
-![Alt text](../assets/milestone2/Question_5/XGB_optimized.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/XGB_optimized.png)
 
 ### Feature selection
 For feature selection, I decided to use a sequential approach by using progressively more complex techniques. There are some automated feature selection tools available with the sci-kit learn library that can choose feature either based on their importance or on their impact on a predefined metric. To do so they can test sequential removal or adding of features and see how it affects the intended metric. Having used Recursive Feature Elimination with Cross Validation in the past, I knew that the runtime would be very long if I did not try to at least remove some features before.
@@ -187,7 +187,7 @@ After that, I looked into feature selection by feature importance. To do so, I m
 
 Looking at the graph below, we can see that some features were not used at all in the construction of the XGBoost like prev_event_goal and prev_event_penalty. I guess that after a goal has just been scored, since the plays are restarted it does not correlate with the chances of having another goal. Interestingly, the most important feature is one we calculated in the first part, net_distance which is very intuitive. The time from prev_event too, since if the events are very close, it means the game is very active, there are a lot of passes or shots and a higher chance to score. 
 
-![Alt text](../assets/milestone2/Question_5/Features_importance.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/Features_importance.png)
 
 With this method, I ended up with around 15 features, which I thought was a big cut from the original features. Since XGBoost perform well even in high dimensionality, I wanted to make sure using another technique based on performance this time that I was not removing too many useful information.
 I decided to use sequential feature selection by using a backward approach, to try and ensure to keep as many features as possible. This ended up necessitating a runtime of more than 3 hours on my computer and in the future, we will probably spend more time on manual removal before using this type of method.
@@ -197,7 +197,7 @@ After choosing the final subset of features, I tried to run an hyperparameter op
 
 [Link](https://www.comet.com/duyhung2201/ift-6758-b03-project/bd37efe04d73402e8fb92e99dce2b994?experiment-tab=panels&showOutliers=true&smoothing=0&xAxis=wall) to best experiment.
 
-![Alt text](../assets/milestone2/Question_5/XGB_reduced_optimized.png)
+![Alt text]({{ site.baseurl }}/assets/milestone2/Question_5/XGB_reduced_optimized.png)
 
 Comparing these results with the baseline XGB, we can first see a small increase in the accuracy as shown in the ROC that is slightly higher with an area under curve of 0.72 instead of 0.71 now. The curves for cumulative goals and goals rate are similar, but the model nows predicts a slightly higher goal rate when it is very confident. I do not see a meaningful difference for the cumulative goals.
 Interestingly, without feature selection, the XGBoost model performed very well with an AUC-ROC of 76% and a calibration plot that was almost perfect. The problem might be due to overfitting, but since we used a validation set, it will be interesting to see the results on the test set. Finally, looking at the calibration plot, we can see that the XGBoost is now very precise until around 50% of predicted probability, but after that the model is not able to be confident enough in its prediction, which might be due to loss of relevant informations.
