Update live links in milestone 1 and milestone 2 posts

--- a/_posts/2023-10-09-milestone 1.md
+++ b/_posts/2023-10-09-milestone 1.md
@@ -1,6 +1,6 @@
-Project demo at: https://youtu.be/Lqi4OQlnkHQ
+**Live at**: [hockey-prediction.streamlit.app](https://hockey-prediction.streamlit.app)
 
-Live at: https://hockey-prediction.streamlit.app
+**Project demo at**: [Youtube](https://youtu.be/Lqi4OQlnkHQ)
 
 ## 1. Data Acquisition 
 The data acquisition process is one of the most important and initial steps of any data science pipeline. The data acquisition process for this project is as follows:
