--- a/_posts/2023-11-14-milestone 2.md
+++ b/_posts/2023-11-14-milestone 2.md
@@ -1,6 +1,6 @@
-Project demo at: https://youtu.be/Lqi4OQlnkHQ
+**Live at**: [hockey-prediction.streamlit.app](https://hockey-prediction.streamlit.app)
 
-Live at: https://hockey-prediction.streamlit.app
+**Project demo at**: [Youtube](https://youtu.be/Lqi4OQlnkHQ)
 
 ## 2. Feature engineering I
 ### A histogram of shot counts binned by distance
