--- a/_posts/2024-06-30-live-app.md
+++ b/_posts/2024-06-30-live-app.md
@@ -9,15 +9,14 @@ I'm excited to share the latest development in our hockey prediction project. We
 
 ## Live App
 
-The hockey prediction app is now live! You can interact with it and explore its features by visiting the following link:
-
-[Live App](http://hockey-prediction.streamlit.app)
+The hockey prediction app is now live! You can interact with it and explore its features by visiting the following [**link**](http://hockey-prediction.streamlit.app).
 
 ## Demo Video
 
 For those who prefer a guided tour of what the app offers, we've prepared a demo video. The video walks you through the app's functionality and showcases its features:
 
-[![Demo Video](https://img.youtube.com/vi/Lqi4OQlnkHQ/0.jpg)](https://youtu.be/Lqi4OQlnkHQ)
+<!-- [![Demo Video]](https://youtu.be/Lqi4OQlnkHQ)\ -->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Lqi4OQlnkHQ?si=q7DoB_CN6hr-jHad" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 We hope you find the app useful and informative. Your feedback is always welcome, as it helps us improve and make the app even better.
 
